--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,6 @@
-version: '2'
-
-services:
-    web:
-        image: lavoweb/php-8.0
-        ports:
-            - "80:80"
-        volumes:
-            - ./www:/var/www/html
-        links:
-            - db:db
-    db:
-        image: mysql:8.0.23
-        volumes:
-            - ./mysql:/var/lib/mysql
-        ports:
-            - "3306:3306"
-        environment:
-            - MYSQL_ROOT_PASSWORD=root
-    myadmin:
-        image: phpmyadmin/phpmyadmin
-        ports:
-            - "8080:80"
-        links:
-            - db:db
+steps:
+- bash: |
+    git push --prune https://$(GITHUB_PAT)@github.com/$REPO_NAME \
+        +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
+  displayName: 'Copy to Github'
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
